--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,11 +38,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     marts:
-      +database: "{{ env_var ('DBT_ENVIRONMENT') }}_GOLD_DB"
+      +database: "DEV_GOLD_DB"
       +schema: "VENTAS"
       +materialized: table
 
     staging:
-      +database: "{{ env_var ('DBT_ENVIRONMENT') }}_SILVER_DB"
+      +database: "DEV_SILVER_DB"
       +schema: "VENTAS"
       +materialized: table
